--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,13 @@
-body {
+* {
   margin: 0;
   padding: 0;
+}
+
+body {
+  background-color: #f2f6ff;
+  padding: 4rem;
+}
+
+.header {
+  margin-bottom: 100px;
 }
