--- a/src/Goals.css
+++ b/src/Goals.css
@@ -14,7 +14,7 @@ html,
 }
 
 .todo-form {
-  background-color: red;
+  background-color: rgb(0, 0, 0);
   display: flex;
   flex-direction: row;
   align-items: center;
