--- a/src/CSS/navbar.css
+++ b/src/CSS/navbar.css
@@ -2,6 +2,9 @@ nav{
     order:1;
     box-sizing: border-box;
     background-color: #FEF1B9 ;
+    z-index: 10;
+    padding: 10px 0px;
+    border-radius: 15px ;
 }
 
 li,a{
