--- a/src/CSS/AddButton.css
+++ b/src/CSS/AddButton.css
@@ -3,9 +3,15 @@
   height: 40px;
   background-color: #6c8cbf;
   border-radius: 100%;
-  transition: background-color 0.2s;
+  transition: background-color 0.2s, transform 0.2s;
 }
 
 .add-button:hover {
   background-color: #7793c2;
+  cursor: pointer;
+  transform: translateY(-2px);
+}
+
+.add-button:active {
+  transform: translateY(0px);
 }
