--- a/src/CSS/welcome.css
+++ b/src/CSS/welcome.css
@@ -11,10 +11,13 @@
 }
 .botonesnow{
     outline: #6c8cbf;
+    font-size: 20px;
     background-color: #6c8cbf;
     display: inline-flex;
     height: 100px;
-    width: 120px;
+    width: 150px;
+    margin: 20px;
     align-items: center;
+    justify-content: center;
     border-radius: 10px;
 }
