--- a/src/CSS/Todo.css
+++ b/src/CSS/Todo.css
@@ -2,10 +2,18 @@
   display: flex;
   gap: 20px;
   align-items: center;
-  border-bottom: 2px solid #a1b5d8;
-  padding: 5px 0px;
 }
 
 .todo:not(:last-child) {
   margin-bottom: 20px;
+}
+
+.todo__input {
+  width: 100%;
+  border: none;
+  background: transparent;
+  outline: none;
+  border-bottom: 2px solid #a1b5d8;
+  padding: 5px 0px;
+  width: 100%;
 }
