--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -12,18 +12,13 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.home,
+.register,
+.login,
+.health,
+.goals {
+  padding: 4rem;
 }
-
 .header > img {
   z-index: -10;
 }
