Frontend del welcome
Los botones no estan conectados a nada

--- a/src/CSS/welcome.css
+++ b/src/CSS/welcome.css
@@ -21,3 +21,23 @@
     justify-content: center;
     border-radius: 10px;
 }
+.botones{
+    outline: #6c8cbf;
+    font-size: 20px;
+    background-color: #6c8cbf;
+    display: inline-flex;
+    height: 50px;
+    width: 100px;
+    margin: 20px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+}
+.botones:hover{
+    outline: #90a0b7;
+    background-color: #90a0b7;
+}
+
+/* .pagina{
+    background-image: "./assests/blob01.png";
+} */
