--- a/src/CSS/Calendario.css
+++ b/src/CSS/Calendario.css
@@ -1,4 +1,15 @@
-.calendar {
+.tareas {
+  align-self: flex-end;
+}
+.calendar{
+  float: left;
+  padding: 2rem;
+  margin-right: 50px;
+}
+.MuiPaper-root.MuiCard-root.cartas.MuiPaper-elevation1.MuiPaper-rounded{
+  margin-left: 200px;
+}
+.principal{
   padding: 4rem;
 }
 .react-calendar {
@@ -12,7 +23,7 @@
   line-height: 1.125em;
 }
 .react-calendar__navigation button {
-  color: #6f48eb;
+  color: #4c86f2;
   min-width: 44px;
   background: none;
   font-size: 16px;
@@ -34,43 +45,43 @@ abbr[title] {
 .react-calendar__tile:enabled:hover,
 .react-calendar__tile:enabled:focus {
   background: #f8f8fa;
-  color: #6f48eb;
+  color: #068dd6;
   border-radius: 6px;
 }
 .react-calendar__tile--now {
   background: #6f48eb33;
   border-radius: 6px;
   font-weight: bold;
-  color: #6f48eb;
+  color: #068dd6;
 }
 .react-calendar__tile--now:enabled:hover,
 .react-calendar__tile--now:enabled:focus {
   background: #6f48eb33;
   border-radius: 6px;
   font-weight: bold;
-  color: #6f48eb;
+  color: #068dd6;
 }
 .react-calendar__tile--hasActive:enabled:hover,
 .react-calendar__tile--hasActive:enabled:focus {
   background: #f8f8fa;
 }
 .react-calendar__tile--active {
-  background: #6f48eb;
+  background: #068dd6;
   border-radius: 6px;
   font-weight: bold;
   color: white;
 }
 .react-calendar__tile--active:enabled:hover,
 .react-calendar__tile--active:enabled:focus {
-  background: #6f48eb;
+  background:#8fb4f8;;
   color: white;
 }
 .react-calendar--selectRange .react-calendar__tile--hover {
   background-color: #f8f8fa;
 }
 .react-calendar__tile--range {
-  background: #f8f8fa;
-  color: #6f48eb;
+  background: #8fb4f8;;
+  color: #C9D5EC;
   border-radius: 0;
 }
 .react-calendar__tile--rangeStart {
@@ -78,7 +89,7 @@ abbr[title] {
   border-bottom-right-radius: 0;
   border-top-left-radius: 6px;
   border-bottom-left-radius: 6px;
-  background: #6f48eb;
+  background: #C9D5EC;
   color: white;
 }
 .react-calendar__tile--rangeEnd {
@@ -86,7 +97,7 @@ abbr[title] {
   border-bottom-left-radius: 0;
   border-top-right-radius: 6px;
   border-bottom-right-radius: 6px;
-  background: #6f48eb;
+  background: #C9D5EC;
   color: white;
 }
 .uno {
@@ -100,4 +111,19 @@ abbr[title] {
   right: -500px;
   transform: rotate(210deg);
   width: 1400px;
+}
+.react-calendar__tile.react-calendar__tile--now.react-calendar__month-view__days__day{
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+  border: #068dd6;
+  background: #C9D5EC;
+  color: rgb(99, 126, 245);
+}
+
+.MuiPaper-root.MuiCard-root.cartas.MuiPaper-elevation1.MuiPaper-rounded{
+  margin-top: 30px;
+  width: 15%;
+  background-color: #F8F3DC;
 }
