--- a/src/CSS/welcome.css
+++ b/src/CSS/welcome.css
@@ -1,5 +1,6 @@
 .welcome {
   padding: 4rem;
+  z-index: 100;
 }
 .titulote {
   font-size: 40px;
@@ -23,6 +24,14 @@
   align-items: center;
   justify-content: center;
   border-radius: 10px;
+  position: relative;
+}
+.botonesnow__icon {
+  position: absolute;
+  color: white;
+  box-shadow: 0px 0px 60px 1px rgb(93, 93, 93);
+  border-radius: 100%;
+  font-size: 2rem;
 }
 .botones {
   outline: #6c8cbf;
