--- a/src/CSS/TodoForm.css
+++ b/src/CSS/TodoForm.css
@@ -1,9 +1,9 @@
 .todo-form {
   display: grid;
   width: 100%;
-  grid-template-columns: 0.5fr 4fr 1fr;
+  grid-template-columns: 4fr 1fr;
   align-items: center;
-  justify-items: center;
+  justify-items: left;
   /* justify-items: center; */
 }
 
@@ -12,10 +12,51 @@
   border: none;
   background: transparent;
   outline: none;
-  border-bottom: 2px solid #738290;
   padding: 5px 0px;
+}
+
+.todo-form__goal {
+  width: 100%;
 }
 
 .todo-form__check {
   /* width: 50px; */
+}
+
+.todo-form__progress {
+  width: 100%;
+  height: 0.5rem;
+  position: relative;
+  display: inline-block;
+  background: #eee;
+  height: 5px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.todo-form__progress::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 50%;
+  background: #6c8cbf;
+}
+
+progress {
+  opacity: 0;
+}
+
+.todo-form__title {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+  width: 100%;
+}
+
+@keyframes progress-animation {
+  to {
+    width: 75%;
+  }
 }
