--- a/src/CSS/TodoForm.css
+++ b/src/CSS/TodoForm.css
@@ -19,29 +19,24 @@
   width: 100%;
 }
 
-.todo-form__check {
-  /* width: 50px; */
-}
-
-.todo-form__progress {
-  width: 100%;
-  height: 0.5rem;
+.todo-form__progress-bar {
   position: relative;
-  display: inline-block;
-  background: #eee;
-  height: 5px;
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-.todo-form__progress::before {
-  content: "";
-  position: absolute;
   top: 0;
   left: 0;
-  height: 100%;
-  width: 50%;
-  background: #6c8cbf;
+  width: 100%;
+  height: 5px;
+  border-radius: 10px;
+  background: #eeee;
+}
+
+.todo-form__progress-bar--progress {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 5px;
+  border-radius: 10px;
+  background-color: #6c8cbf;
+  transition: 0.2s;
 }
 
 progress {
