--- a/src/CSS/TodoForm.css
+++ b/src/CSS/TodoForm.css
@@ -1,9 +1,9 @@
 .todo-form {
   display: grid;
   width: 100%;
-  grid-template-columns: 4fr 1fr;
+  grid-template-columns: 0.5fr 4fr 1fr;
   align-items: center;
-  justify-items: left;
+  justify-items: center;
   /* justify-items: center; */
 }
 
@@ -12,46 +12,10 @@
   border: none;
   background: transparent;
   outline: none;
+  border-bottom: 2px solid #738290;
   padding: 5px 0px;
 }
 
-.todo-form__goal {
-  width: 100%;
-}
-
-.todo-form__progress-bar {
-  position: relative;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 5px;
-  border-radius: 10px;
-  background: #eeee;
-}
-
-.todo-form__progress-bar--progress {
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 5px;
-  border-radius: 10px;
-  background-color: #6c8cbf;
-  transition: 0.2s;
-}
-
-progress {
-  opacity: 0;
-}
-
-.todo-form__title {
-  display: flex;
-  gap: 2rem;
-  align-items: center;
-  width: 100%;
-}
-
-@keyframes progress-animation {
-  to {
-    width: 75%;
-  }
+.todo-form__check {
+  /* width: 50px; */
 }
